--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorAccent" />
+    <item>
+        <color android:color="#111" />
+    </item>
 
 
+    <item android:drawable="@drawable/ic_baby_bottle"
+          android:gravity="center"/>
 </layer-list>
