--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:elevation="4dp"
-        android:background="@android:color/white"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize">
 
@@ -18,6 +18,7 @@
             android:layout_marginStart="16dp"
             android:layout_toStartOf="@+id/ivDelete"
             android:textColor="@color/textMain"
+            android:textColorHint="@color/textOther"
             android:maxLines="1"
             android:fontFamily="sans-serif-light"
             android:textSize="17sp"
