--- a/app/src/main/res/layout/fragment_dialogs.xml
+++ b/app/src/main/res/layout/fragment_dialogs.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/background">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvDialogs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
 </RelativeLayout>
