--- a/app/src/main/res/layout/dialog_comment.xml
+++ b/app/src/main/res/layout/dialog_comment.xml
@@ -2,14 +2,15 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:elevation="4dp"
-        android:background="@android:color/white"
+        android:background="@color/background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     <EditText
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:textColor="@color/textMain"
+            style="@style/MainText"
+            android:textColorHint="@color/textOther"
             android:maxLines="12"
             android:fontFamily="sans-serif-light"
             android:textSize="17sp"
