--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -8,43 +8,60 @@
         android:background="@color/background">
 
     <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBar"
             android:layout_width="match_parent"
             android:layout_height="300dp">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:expandedTitleGravity="top"
+                app:layout_collapseMode="parallax"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-            <RelativeLayout
-                    app:layout_collapseMode="parallax"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    app:expandedTitleGravity="top">
 
-                <ImageView
-                        android:id="@+id/ivHeader"
+                <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fitsSystemWindows="true"
-                        android:scaleType="centerCrop"/>
+                        android:layout_height="match_parent">
 
-                <TextView
-                        android:background="@drawable/shape_text_black_overlay"
-                        android:id="@+id/tvHeader"
-                        style="@style/WhiteText"
-                        android:gravity="center"
-                        android:paddingStart="2dp"
-                        android:paddingEnd="2dp"
-                        android:layout_centerInParent="true"
-                        android:textSize="36sp"
-                        tools:text="e s t h é t i q u e"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                    <ImageView
+                            android:id="@+id/ivHeader"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fitsSystemWindows="true"
+                            android:scaleType="centerCrop"/>
 
-            </RelativeLayout>
+                    <TextView
+                            android:background="@drawable/shape_text_black_overlay"
+                            android:id="@+id/tvHeader"
+                            style="@style/WhiteText"
+                            android:gravity="center"
+                            android:paddingStart="2dp"
+                            android:paddingEnd="2dp"
+                            android:layout_centerInParent="true"
+                            android:textSize="36sp"
+                            tools:text="e s t h é t i q u e"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+                </RelativeLayout>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            <Button
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/btnSubscribe"
+                    style="@style/Button"
+                    android:layout_margin="16dp"
+                    android:text="@string/subscribe"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"/>
+
+        </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
